# stack-vm

./: .gitignore  AsmStatementNode.h  BinaryExpressionNode.h  CMakeLists.txt  ConcatNode.h  ExpressionNode.cpp  ExpressionNode.h  GeneratorVisitor.cpp  GeneratorVisitor.h  IVisitor.cpp  IVisitor.h  IntExpressionNode.cpp  IntExpressionNode.h  LithiumParser.cpp  LithiumParser.h  Makefile  Node.h  Nodes.h  OperatorNode.cpp  PrintStatementNode.h  Program.h  ProgramNode.cpp  ProgramNode.h  README.md  SVASMParser.cpp  SVMException.h  SimpleVirtualMachine.cpp  SimpleVirtualMachine.h  StatementNode.cpp  StringExpressionNode.h  UnaryExpressionNode.h  build  grammar  grammar.ll1  instructions.md  main.cpp  svm.sln  svm.vcxproj  svm.vcxproj.filters  test.li  (+2 more)
extension/: CHANGELOG.md  README.md  package.json
extension/lithium-language-support/: README.md  package.json  vsc-extension-quickstart.md
extension/package/: lithium-language-support-0.0.1.vsix
extension/src/: LICENSE.md  Makefile  package.json
extension/syntaxes/: lithium.tmLanguage.json
src/compiler/: CMakeLists.txt
src/compiler/ast/include/: IntExpressionNode.h  Node.h  OperatorNode.h  StatementNode.h
src/compiler/ast/src/: BinaryExpressionNode.cpp  PrintStatementNode.cpp  UnaryExpressionNode.cpp
src/compiler/include/: LithiumParser.h
src/compiler/src/: LithiumParser.cpp  main.cpp
src/compiler/visitors/generator/include/: GeneratorVisitor.h
src/compiler/visitors/generator/src/: GeneratorVisitor.cpp
src/extension/: Makefile  definitionProvider.js  extension.js  (+5 more)
tests/: test.li  test_strings.li
(+200 files in other folders)
